tests/baselines/reference/project/declarationsImportedInPrivate/node/declarationsImportedInPrivate.errors.txt
useModule.ts(3,15): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== private_m4.ts (0 errors) ====
    
    export class d {
    };
    export var x: d;
    export function foo(): d {
        return new d();
    }
    
    
==== useModule.ts (1 errors) ====
    // only used privately no need to emit
    import private_m4 = require("private_m4");
    export module usePrivate_m4_m1 {
                  ~~~~~~~~~~~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        var x3 = private_m4.x;
        var d3 = private_m4.d;
        var f3 = private_m4.foo();
    
        export var numberVar: number;
    }